partiql/tests/snapshots/pretty__graph_match_and_join_1.snap
---
source: partiql/tests/pretty.rs
expression: doc
---
========================================================================================================================================================================================================
SELECT a,b,c, t1.x as x, t2.y as y FROM GRAPH_TABLE (g MATCH (a) -> (b), (a) -> (c)), table1 as t1, table2 as t2
========================================================================================================================================================================================================

------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
SELECT a, b, c, t1.x AS x, t2.y AS y FROM GRAPH_TABLE (g MATCH (a) -> (b), (a) -> (c)), table1 AS t1, table2 AS t2

------------------------------------------------------------------------------------------------------------------------
SELECT a, b, c, t1.x AS x, t2.y AS y FROM GRAPH_TABLE (g MATCH (a) -> (b), (a) -> (c)), table1 AS t1, table2 AS t2

--------------------------------------------------------------------------------
SELECT a, b, c, t1.x AS x, t2.y AS y FROM GRAPH_TABLE (g MATCH (a) -> (b),
    (a) -> (c)), table1 AS t1, table2 AS t2

----------------------------------------
SELECT a, b, c, t1.x AS x, t2.y AS y
FROM GRAPH_TABLE (g MATCH (a) -> (b),
    (a) -> (c)), table1 AS t1,
  table2 AS t2

------------------------------
SELECT a, b, c, t1.x AS x,
  t2.y AS y
FROM GRAPH_TABLE (g MATCH (a) -> (b),
    (a) -> (c)), table1 AS t1,
  table2 AS t2

--------------------
SELECT a, b, c,
  t1.x AS x,
  t2.y AS y
FROM GRAPH_TABLE (g MATCH (a) -> (b),
    (a) -> (c)),
  table1 AS t1,
  table2 AS t2

----------
SELECT a,
  b, c,
  t1.x AS x,
  t2.y AS y
FROM GRAPH_TABLE (g MATCH (a) -> (b),
    (a) -> (c)),
  table1 AS t1,
  table2 AS t2
