partiql/tests/snapshots/pretty__graph_match_and_join_2.snap
---
source: partiql/tests/pretty.rs
expression: doc
---
========================================================================================================================================================================================================
SELECT a,b,c, t1.x as x, t2.y as y FROM table1 as t1, table2 as t2, GRAPH_TABLE (g MATCH (a) -> (b), (a) -> (c))
========================================================================================================================================================================================================

------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
SELECT a, b, c, t1.x AS x, t2.y AS y FROM table1 AS t1, table2 AS t2, GRAPH_TABLE (g MATCH (a) -> (b), (a) -> (c))

------------------------------------------------------------------------------------------------------------------------
SELECT a, b, c, t1.x AS x, t2.y AS y FROM table1 AS t1, table2 AS t2, GRAPH_TABLE (g MATCH (a) -> (b), (a) -> (c))

--------------------------------------------------------------------------------
SELECT a, b, c, t1.x AS x, t2.y AS y FROM table1 AS t1, table2 AS t2,
  GRAPH_TABLE (g MATCH (a) -> (b), (a) -> (c))

----------------------------------------
SELECT a, b, c, t1.x AS x, t2.y AS y
FROM table1 AS t1, table2 AS t2,
  GRAPH_TABLE (g MATCH (a) -> (b),
    (a) -> (c))

------------------------------
SELECT a, b, c, t1.x AS x,
  t2.y AS y
FROM table1 AS t1,
  table2 AS t2,
  GRAPH_TABLE (g MATCH (a) -> (b),
    (a) -> (c))

--------------------
SELECT a, b, c,
  t1.x AS x,
  t2.y AS y
FROM table1 AS t1,
  table2 AS t2,
  GRAPH_TABLE (g MATCH (a) -> (b),
    (a) -> (c))

----------
SELECT a,
  b, c,
  t1.x AS x,
  t2.y AS y
FROM table1 AS t1,
  table2 AS t2,
  GRAPH_TABLE (g MATCH (a) -> (b),
    (a) -> (c))
