partiql/tests/snapshots/pretty__graph_parenthesized_1.snap
---
source: partiql/tests/pretty.rs
expression: doc
---
========================================================================================================================================================================================================
SELECT a,b FROM GRAPH_TABLE (g MATCH ((a:A)-[e:Edge]->(b:A) WHERE a.owner=b.owner){2,5})
========================================================================================================================================================================================================

------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
SELECT a, b FROM GRAPH_TABLE (g MATCH ((a:A) -[e:Edge]-> (b:A) WHERE (a.owner = b.owner)){2,5})

------------------------------------------------------------------------------------------------------------------------
SELECT a, b FROM GRAPH_TABLE (g MATCH ((a:A) -[e:Edge]-> (b:A) WHERE (a.owner = b.owner)){2,5})

--------------------------------------------------------------------------------
SELECT a, b
FROM GRAPH_TABLE (g MATCH ((a:A) -[e:Edge]-> (b:A) WHERE (a.owner = b.owner)){2,5})

----------------------------------------
SELECT a, b
FROM GRAPH_TABLE (g MATCH ((a:A) -[e:Edge]-> (b:A) WHERE (a.owner = b.owner)){2,5})

------------------------------
SELECT a, b
FROM GRAPH_TABLE (g MATCH ((a:A) -[e:Edge]-> (b:A) WHERE (a.owner = b.owner)){2,5})

--------------------
SELECT a, b
FROM GRAPH_TABLE (g MATCH ((a:A) -[e:Edge]-> (b:A) WHERE (a.owner = b.owner)){2,5})

----------
SELECT a,
  b
FROM GRAPH_TABLE (g MATCH ((a:A) -[e:Edge]-> (b:A) WHERE (a.owner = b.owner)){2,5})
