partiql/tests/snapshots/pretty__graph_restrictors_1.snap
---
source: partiql/tests/pretty.rs
expression: doc
---
========================================================================================================================================================================================================
SELECT p FROM g MATCH TRAIL p = (a WHERE a.owner='Dave') -[t:Transfer]-> * (b WHERE b.owner='Aretha')
========================================================================================================================================================================================================

------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
SELECT p FROM g MATCH [TRAIL p = (a WHERE (a.owner = 'Dave')) -[t:Transfer]->* (b WHERE (b.owner = 'Aretha'))]

------------------------------------------------------------------------------------------------------------------------
SELECT p FROM g MATCH [TRAIL p = (a WHERE (a.owner = 'Dave')) -[t:Transfer]->* (b WHERE (b.owner = 'Aretha'))]

--------------------------------------------------------------------------------
SELECT p
FROM g MATCH [TRAIL p = (a WHERE (a.owner = 'Dave')) -[t:Transfer]->* (b WHERE (b.owner = 'Aretha'))]

----------------------------------------
SELECT p
FROM g MATCH [TRAIL p = (a WHERE (a.owner = 'Dave')) -[t:Transfer]->* (b WHERE (b.owner = 'Aretha'))]

------------------------------
SELECT p
FROM g MATCH [TRAIL p = (a WHERE (a.owner = 'Dave')) -[t:Transfer]->* (b WHERE (b.owner = 'Aretha'))]

--------------------
SELECT p
FROM g MATCH [TRAIL p = (a WHERE (a.owner = 'Dave')) -[t:Transfer]->* (b WHERE (b.owner = 'Aretha'))]

----------
SELECT p
FROM g MATCH [TRAIL p = (a WHERE (a.owner = 'Dave')) -[t:Transfer]->* (b WHERE (b.owner = 'Aretha'))]
