partiql/tests/snapshots/pretty__graph_restrictors_3.snap
---
source: partiql/tests/pretty.rs
expression: doc
---
========================================================================================================================================================================================================
SELECT p FROM g MATCH ACYCLIC p = (a WHERE a.owner='Dave') -[t:Transfer]-> * (b WHERE b.owner='Aretha')
========================================================================================================================================================================================================

------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
SELECT p FROM g MATCH [ACYCLIC p = (a WHERE (a.owner = 'Dave')) -[t:Transfer]->* (b WHERE (b.owner = 'Aretha'))]

------------------------------------------------------------------------------------------------------------------------
SELECT p FROM g MATCH [ACYCLIC p = (a WHERE (a.owner = 'Dave')) -[t:Transfer]->* (b WHERE (b.owner = 'Aretha'))]

--------------------------------------------------------------------------------
SELECT p
FROM g MATCH [ACYCLIC p = (a WHERE (a.owner = 'Dave')) -[t:Transfer]->* (b WHERE (b.owner = 'Aretha'))]

----------------------------------------
SELECT p
FROM g MATCH [ACYCLIC p = (a WHERE (a.owner = 'Dave')) -[t:Transfer]->* (b WHERE (b.owner = 'Aretha'))]

------------------------------
SELECT p
FROM g MATCH [ACYCLIC p = (a WHERE (a.owner = 'Dave')) -[t:Transfer]->* (b WHERE (b.owner = 'Aretha'))]

--------------------
SELECT p
FROM g MATCH [ACYCLIC p = (a WHERE (a.owner = 'Dave')) -[t:Transfer]->* (b WHERE (b.owner = 'Aretha'))]

----------
SELECT p
FROM g MATCH [ACYCLIC p = (a WHERE (a.owner = 'Dave')) -[t:Transfer]->* (b WHERE (b.owner = 'Aretha'))]
